<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.ChangePasswordActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_height="@dimen/_80sdp"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_25sdp">

                <ImageView
                    android:id="@+id/backIcons"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:src="@drawable/ic_back_icon" />

                <TextView
                    android:id="@+id/titleToolbar"
                    style="@style/toolbarTextStyle"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:paddingTop="@dimen/_35sdp"
                    android:paddingStart="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_25sdp"
                    android:src="@drawable/new_change_password"
                    android:background="@drawable/shodow_effect"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"/>

                <LinearLayout
                    android:paddingTop="@dimen/_20sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:visibility="gone"
                        android:textColor="@color/BlackColorSeconday"
                        android:fontFamily="@font/muli_regular"
                        android:textSize="@dimen/_20sdp"
                        android:textAlignment="center"
                        android:text="@string/reset_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:paddingStart="@dimen/_20sdp"
                        android:paddingEnd="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/muli_regular"
                        android:textSize="@dimen/_9sdp"
                        android:textAlignment="center"
                        android:text="@string/enter_the_new_password_we_will_reset_your_old_password_with_new_one"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="@dimen/_40sdp"
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/current_password"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/OldPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            android:maxEms="13"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_10sdp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/new_password"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/newPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            android:maxEms="13"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_10sdp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/LoginTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confiramPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingStart="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_15sdp"
                            android:maxEms="13"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textSize="@dimen/_10sdp" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton
                        android:letterSpacing="0"
                        android:id="@+id/SaveBtn"
                        android:layout_width="@dimen/_150sdp"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_height="@dimen/_45sdp"
                         android:elevation="@dimen/_10sdp"
                        android:fontFamily="@font/muli_regular"
                        android:text="@string/change_password"
                        android:layout_gravity="bottom|center_horizontal"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12sdp"
                        app:cornerRadius="@dimen/_20sdp"
                        app:elevation="@dimen/_20sdp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>